--- a/Index.html
+++ b/Index.html
@@ -12,15 +12,15 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(500deg, #b21f1f, #000, #121212, #121212, #121212, #000);
+            background-color: #f9f9f9;
         }
         header {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            height: 55px;
-            background-color: rgba(0, 0, 0, 0.8);
+            height: 50px;
+            background-color: #fff;
             display: flex;
             border: 1px solid #ccc;
             border-radius: 8px;
@@ -40,7 +40,7 @@
             font-size: 16px;
             margin: 0 9px;
             border: 1px solid #ccc;
-            background: #;
+            background: linear-gradient(to right, #004d00, #00b300);
             border-radius: 20px;
             padding: 9px 9px;
             font-weight: bold;
@@ -50,7 +50,7 @@
             flex: 0 1 100px;
             margin: 0 10px;            
             padding: 7px;
-            background-color: #444;
+            background-color: #f1f1f1;
             border: 2px solid #ccc;
             border-radius: 20px;
             font-size: 14px;
@@ -63,7 +63,7 @@
         .history-icon {
             font-size: 20px;
             cursor: pointer;
-            color: #ddd;
+            color: #333;
         }
         .history-icon:hover {
             color: #00b300;
@@ -194,8 +194,8 @@
         }
         .discover-item {
             flex: 0 0 auto;
-            width: 110px;
-            background-color: #121212;
+            width: 130px;
+            background-color: #f0f0f0;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             overflow: hidden;
@@ -214,7 +214,7 @@
         .discover-item .content h2 {
             font-size: 6px;
             margin: 0;
-            color: #fff;
+            color: #333;
         }
         .discover-item .content p {
             font-size: 0px;
@@ -222,7 +222,7 @@
             margin: 0px 0;
         }
         .discover-item button {
-    background: linear-gradient(to right, #004d00, #ff6600);
+    background: linear-gradient(to right, #004d00, #00b300);
     color: #fff;
     border: 1px solid #ccc;
     padding: 5px 2px;
@@ -248,7 +248,6 @@
             font-weight: bold;
             margin-bottom: 15px;
             display: flex;
-            color: #fff;
             margin-left: 7px;
             justify-content: space-between;
             align-items: center;
@@ -285,7 +284,7 @@
         .frame {
             flex: 0 0 auto;
             width: 112px;
-            background-color: #121212;
+            background-color: #f0f0f0;
             border-radius: 8px;
             margin-left: 5px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -300,12 +299,11 @@
         }
         .frame .content h2 {
             font-size: 6px;
-            color: #fff;
             text-align: center;
             margin-top: 0px;
         }
         .frame .content button {
-            background: linear-gradient(to right, #004d00, #ff6600);
+            background: linear-gradient(to right, #004d00, #00b300);
             color: #fff;
             border: 1px solid #ccc;
             padding: 5px 5px;
@@ -589,7 +587,7 @@
 .bars-icon {
     font-size: 20px;
     cursor: pointer;
-    color: #ddd;
+    color: #333;
     margin-left: 10px;
 }
 
@@ -643,9 +641,8 @@ footer {
     justify-content: space-around;
     align-items: center;
     padding: 12px 0;
-    border: 1px solid #ccc;
     border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: #fff;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -657,7 +654,7 @@ footer {
 footer .nav-icon {
     flex: 1;
     text-align: center;
-    color: #ddd;
+    color: #333;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
     font-size: 9.2px;
@@ -780,7 +777,7 @@ footer.hide {
     position: absolute;
     bottom: 20px;
     right: 15px;
-    background: linear-gradient(to right, #004d00, #ff6600);
+    background: linear-gradient(to right, #004d00, #00b300);
     color: white;
     font-size: 14px;
     padding: 8px 12px;
@@ -1005,17 +1002,17 @@ footer.hide {
 
 <!-- Bottom Navigation Bar -->
 <footer>
-     <div class="nav-icon" onclick="showDiscoverAndCategories()">
-        <i class="fas fa-home"></i>
-        <span>Home</span>
+    <div class="nav-icon" onclick="showHomeVideos()">
+        <i class="fas fa-layer-group"></i>
+        <span>Library</span>
+    </div>
+    <div class="nav-icon" onclick="showDiscoverAndCategories()">
+        <i class="fas fa-book-open"></i>
+        <span>Discover</span>
     </div>
     <div class="nav-icon" onclick="showTrendingVideos()">
         <i class="fas fa-fire"></i>
         <span>Now & Hot</span>
-    </div>
-    <div class="nav-icon" onclick="showHomeVideos()">
-        <i class="fas fa-clapperboard"></i>
-        <span>Library</span>
     </div>
     <div class="nav-icon" onclick="showUnlockedVideos()">
         <i class="fas fa-lock-open"></i>
