--- a/Index.html
+++ b/Index.html
@@ -12,14 +12,14 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(500deg, #b21f1f, #000, #121212, #121212, #121212, #000);
+            background: linear-gradient(500deg, #121212, #333);
         }
         header {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            height: 55px;
+            height: 56px;
             background-color: rgba(0, 0, 0, 0.8);
             display: flex;
             border: 1px solid #ccc;
@@ -37,7 +37,7 @@
             width: 100%;
         }
         .logo {
-            font-size: 16px;
+            font-size: 15px;
             margin: 0 9px;
             border: 1px solid #ccc;
             background: #;
@@ -50,7 +50,7 @@
             flex: 0 1 100px;
             margin: 0 10px;            
             padding: 7px;
-            background-color: #444;
+            background-color: #ddd;
             border: 2px solid #ccc;
             border-radius: 20px;
             font-size: 14px;
