--- a/Index.html
+++ b/Index.html
@@ -222,7 +222,7 @@
             margin: 0px 0;
         }
         .discover-item button {
-    background: linear-gradient(to right, #004d00, #ff6600);
+    background: linear-gradient(to right, #004d00, #ff);
     color: #fff;
     border: 1px solid #ccc;
     padding: 5px 2px;
@@ -305,7 +305,7 @@
             margin-top: 0px;
         }
         .frame .content button {
-            background: linear-gradient(to right, #004d00, #ff6600);
+            background: linear-gradient(to right, #004d00, #ff);
             color: #fff;
             border: 1px solid #ccc;
             padding: 5px 5px;
@@ -660,7 +660,7 @@ footer .nav-icon {
     color: #ddd;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
-    font-size: 9.2px;
+    font-size: 9px;
     display: flex;
     flex-direction: column;
     align-items: center;
