--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(500deg, #333, #121212, #121212, #333, #121212, #333, #121212, #333);
+            background: linear-gradient(500deg, #121212, #121212);
         }
         header {
             position: fixed;
@@ -40,7 +40,7 @@
             font-size: 15px;
             margin: 0 9px;
             border: 1px solid #ccc;
-            background: linear-gradient(to right, #004d00, #00b300);
+            background: linear-gradient(to right, #ff6600, #00b300);
             border-radius: 20px;
             padding: 9px 9px;
             font-weight: bold;
@@ -222,7 +222,7 @@
             margin: 0px 0;
         }
         .discover-item button {
-    background: linear-gradient(to right, #004d00, #00b300);
+    background: linear-gradient(to right, #ff6600, #00b300);
     color: #fff;
     border: 1px solid #ccc;
     padding: 5px 2px;
@@ -305,7 +305,7 @@
             margin-top: 0px;
         }
         .frame .content button {
-            background: linear-gradient(to right, #004d00, #00b300);
+            background: linear-gradient(to right, #ff6600, #00b300);
             color: #fff;
             border: 1px solid #ccc;
             padding: 5px 5px;
@@ -438,7 +438,7 @@
 
 #social-media-descriptions h2 {
     font-size: 15px;
-    color: #333;
+    color: #fff;
     margin: 5;
 }
 
@@ -457,8 +457,8 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background: linear-gradient(to right, #004d00, #00b300);
-    color: white;
+    background: linear-gradient(to right, #fff, #fff);
+    color: black;
     font-size: 18px;
     cursor: pointer;
     text-decoration: none;
@@ -864,10 +864,10 @@ footer.hide {
         }
 
         .partner-item img {
-            width: 120px;
-            height: 160px;
+            width: 100px;
+            height: 100px;
             object-fit: cover;
-            border-radius: 8px;
+            border-radius: 50px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: transform 0.2s;
         }
