--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(500deg, #121212, #121212);
+            background: linear-gradient(500deg, #141430, #141430);
         }
         header {
             position: fixed;
@@ -20,7 +20,7 @@
             left: 0;
             width: 100%;
             height: 56px;
-            background-color: rgba(0, 0, 0, 0.7);
+            background-color: rgba(0, 0, 0, 0.2);
             display: flex;
             border: 1px solid #ccc;
             border-radius: 8px;
@@ -40,7 +40,7 @@
             font-size: 15px;
             margin: 0 9px;
             border: 1px solid #ccc;
-            background: linear-gradient(to right, #ff6600, #00b300);
+            background: linear-gradient(to right, #004d00, #00b300);
             border-radius: 20px;
             padding: 9px 9px;
             font-weight: bold;
@@ -222,7 +222,7 @@
             margin: 0px 0;
         }
         .discover-item button {
-    background: linear-gradient(to right, #ff6600, #00b300);
+    background: linear-gradient(to right, #004d00, #00b300);
     color: #fff;
     border: 1px solid #ccc;
     padding: 5px 2px;
@@ -305,7 +305,7 @@
             margin-top: 0px;
         }
         .frame .content button {
-            background: linear-gradient(to right, #ff6600, #00b300);
+            background: linear-gradient(to right, #004d00, #00b300);
             color: #fff;
             border: 1px solid #ccc;
             padding: 5px 5px;
@@ -645,7 +645,7 @@ footer {
     padding: 12px 0;
     border: 1px solid #ccc;
     border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.9);
+    background: linear-gradient(500deg, #141430, #141430);
     position: fixed;
     bottom: 0;
     left: 0;
