--- a/Index.html
+++ b/Index.html
@@ -1031,31 +1031,192 @@ footer.hide {
     <script>
         const data = [
     {
-        imgUrl: "https://short-link.me/TC0e",
-        videoUrl: "https://mega.nz/embed/Bg5WHZCT#AtJdNj-to6hZb0CSUA-RqF84-_qfcnPD2zd9E6OqE3k",
+        imgUrl: "https://short-link.me/UrN2",
+        videoUrl: "https://mega.nz/embed/l4Qy2TzT#7A7lHPElDvm_2Q8ySx5b4YItPjA8t7zgzTC660xIjN0",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
-        title: "KUDIRI",
+        title: "BIRNIN TARIHI (1)",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/ROfz",
+        videoUrl: "https://mega.nz/embed/l85WGIrA#o-VYIScap1R9rN-JRRZLFuAGmj2m1rL-flNVtJbtLDA",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "BIRNIN TARIHI (2)",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RObm",
+        videoUrl: "https://mega.nz/embed/Uw52hb4B#ecsngIoNwDOGrviYPs2np5-gTL5k6rO3R-Dgf-uK-Mw",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "BIJIRARRE",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UqVG",
+        videoUrl: "https://mega.nz/embed/ggZ2USDC#_s3i7ikPXINuYaG47zwFQo794_U63uOG3Q-s5hTyFXY",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "BADALI MASTER",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RNHL",
+        videoUrl: "https://mega.nz/embed/54YWjRBY#K3U_gGSZiDW7LMre0PTjPQcc18U1KX1mheuuksd-gz8",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "AMANAR TALAKA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UqRW",
+        videoUrl: "https://mega.nz/embed/pgI1XaZa#G4QKNwM0Ynvx4aF4o6Gr1W_PjhqGBNqXK8AVURAxrbw",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "A BUSA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UqQy",
+        videoUrl: "https://mega.nz/embed/dwJyUDrI#gc3o_AzNXr7K39YlYel_1A5K5jcNnjwIDviMtiWbZxw",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "'YAN UKU",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UqLX",
+        videoUrl: "https://mega.nz/embed/VhhFQYKL#6dchOs8HwkB5SFkBR-Sl_7VF9uoIA1ekRgPHJZyMY2Y",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "DAABI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UqJn",
+        videoUrl: "https://mega.nz/embed/UlRDSYqC#SyzJfG8SqbQ4HrUWEye-JYX2epIe6ezDQYnh7zFSQiI",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "LABARIN DAN SANDA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UqH1",
+        videoUrl: "https://mega.nz/embed/c9J3DZiL#pH9L9Yr1_N3VHRwFW-LgwPJ3q2Idz-nxzb_mb7NfzK8",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "JAJIRTACCE",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UqEz",
+        videoUrl: "https://mega.nz/embed/1xohhZ5D#OCkQlGu69805LM0Tq5OU9ZY8z1VuP2AkRqu7bb69T2Y",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "BABBAR YAYA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UqDr",
+        videoUrl: "https://mega.nz/embed/ZhBVQRCQ#v6KMMhzFG8a2z5b-giz41esq7PHxOfTw0TQHJDjm824",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "BOKAN YAKI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RNqm",
+        videoUrl: "https://mega.nz/embed/Z8ZFmBIS#LsQVTagmvNZ5BDX6GwKRXaRjH0wHozzR2C80kRNWLIg",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "SAMBADEBADE",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RNmr",
+        videoUrl: "https://mega.nz/embed/ogQWWYhC#JvLKzoozFV1jp-hScklS4BiivV_ay1rtFAmiABY8pU8",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "GARWASHI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/Uqu3",
+        videoUrl: "https://mega.nz/embed/gpp33bjA#eVQL3qa5-nmTDVPBCHH81gCU_6tCeei4jzY82D3ITI0",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "MAKIYAYI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UqqQ",
+        videoUrl: "https://mega.nz/embed/d9A33RZb#Jc5kQXW_eoKlu-tcxe0YOVk2mmmqxYEit_1vzZ6ebZI",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "DAN BASAJA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RNdj",
+        videoUrl: "https://mega.nz/embed/9oxXkaBa#1AuI6D4SlTWrOvVzkLBMPmJNc4mHe3IAuXGijO1-aSo",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "DAN MAI KARFI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/Uql7",
+        videoUrl: "https://mega.nz/embed/k4IVUJQY#5bk6NgX70Xf7E3hFfMAeYjt_jXiZq5JnmxVAsbCBccM",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "GIJIN YAKI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RN7G",
+        videoUrl: "https://mega.nz/embed/8lZHSA6R#ufmsTabC8Bf9MIuGK_LCBd7_-pV8d2k31Ga7ZkBsvzk",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "GHAJINI AZZALUMI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RN0x",
+        videoUrl: "https://mega.nz/embed/J1h2wArA#N4DGghHQxA2uQMnHYjE_jZPFra-OHuE1DvmB6Cwziwo",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "AZZALUMIN RUHI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/Uq6z",
+        videoUrl: "https://mega.nz/embed/o8oiDDoD#xTtf33vhpGjZgIa6lfmOJDaqepIVdxSjRchD6URtnB8",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "ALKAWARI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/Uq4Z",
+        videoUrl: "https://mega.nz/embed/tgpVQCrL#bwMndpko7DlTh95JcAUHdRCSXx0PoMmYYXrhPWFF_TA",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "MATASHIN SOJA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RMTv",
+        videoUrl: "https://mega.nz/embed/gpYm2bzQ#YOp7B7u1t9hnIJm6suVVleCUhdxgfmAUWv8YlGiH9IY",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "KAIDI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RMQR",
+        videoUrl: "https://mega.nz/embed/gopCDLCb#ekDhfKzSVWoWapu7RAeE6hVvRcoGHcHyuYJ1dtG882Q",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "MAI MAKANA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UpXL",
+        videoUrl: "https://mega.nz/embed/0lxnXaCL#8sFJrnzKvQuGGZh681c0nsiAepKM0gB4D0AfMgyCZ2A",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "USTAZ",
         category: "Algaita Dub-Studio",
     },
     {
-        imgUrl: "https://indiahausatv.com/uploads/poster/67b23885b15a0_photo_2025-02-16_17-55-51.jpg",
-        videoUrl: "https://mega.nz/embed/QhZ3WRZT#9oLp_nYfPh36PLytwJ68M0lBeCHUPw9e8HjcXPxZTXg",
+        imgUrl: "https://short-link.me/RMLE",
+        videoUrl: "https://mega.nz/embed/4pw1RRAC#O3dakYRcx39fhoFzkk_zu3JiNZfJstXBBS0lcGtZBxg",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
-        title: "FARCEN DAMISA",
+        title: "KABILANCI",
         category: "Algaita Dub-Studio",
     },
     {
-        imgUrl: "https://short-link.me/Rm6-",
-        videoUrl: "https://mega.nz/embed/B5xjQDQL#635tqMQmikItwWsXWKMwTKyMTpQ8U5PX_cVTF4vv0_I",
+        imgUrl: "https://short-link.me/RMJr",
+        videoUrl: "https://mega.nz/embed/d4YFkTDJ#uYB2AlO15C2btKPL-NELzBGPF1Ouu0yDAr7FVtHvmUQ",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
-        title: "DOKIN KARFE",
-        category: "Algaita Dub-Studio",
-    },
-    {
-        imgUrl: "https://indiahausatv.com/uploads/poster/67a8efcc44d7b_photo_2025-02-09_19-11-09.jpg",
-        videoUrl: "https://mega.nz/embed/BgAjTIbI#hXPlTnQ-UzZbimBQ6QFUCLUs8TqTMp4rncavkyylMxU",
-        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
-        title: "KARKARA",
+        title: "ZAKIN HUKUMA",
         category: "Algaita Dub-Studio",
     },        
     {
