--- a/Index.html
+++ b/Index.html
@@ -1030,6 +1030,90 @@ footer.hide {
 
     <script>
         const data = [
+            {
+        imgUrl: "https://short-link.me/RPiQ",
+        videoUrl: "https://mega.nz/embed/Bp4yGIgB#g4XDfFVFI6XtAaSqF8x7Fu6a5qnzTPqMdSoZwwzmpyk",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "DANYEN AIKI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RPhA",
+        videoUrl: "https://mega.nz/embed/chxBwKbQ#syjXVCY4e32cf8NslpsXYqXl66EsduK7vbTT46iASeE",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "GAIBU",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RPfL",
+        videoUrl: "https://mega.nz/embed/phQCgQjS#7JtILOglsulh6FDj0aWmSItyujGwl5F7onMaFMguFCI",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "GAGARE (2)",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/Usrn",
+        videoUrl: "https://mega.nz/embed/AhhnQCwb#CJWfxHyrkmfo27Iw8PHap-_7jZ_y_crla-OQM6mVZjg",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "GAGARE (1)",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/Usp0",
+        videoUrl: "https://mega.nz/embed/A8ZDzCYa#hAANW8fzv0iUbJBCBjwRDlvZ9F7rl8vZ1jTH92syh00",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "DAN DAMISA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RP7G",
+        videoUrl: "https://mega.nz/embed/UtQFkZ5a#bdr3z2qTgoGT8CqvDkPOOikNeelWVw6tIoED8fCYvGE",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "DAMISA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RP5I",
+        videoUrl: "https://mega.nz/embed/9wQGTKpI#Tdv2LR8ymvH-Bhd2QlvExj-n6AlWexqjl-v6O-UuXSw",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "DANBEN MAZA (2)",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RP5I",
+        videoUrl: "https://mega.nz/embed/05hAADpC#WMQOX1W7QrQHWOKnzerlw8ls6MWH_WzP2tGIawtCsXg",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "DAMBEN MAZA (1)",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RP0h",
+        videoUrl: "https://mega.nz/embed/spoghIjR#P8_kaxXeU1NHd80Aj4hIe9XXLVVu_zDRUw9jOqIvJVk",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "GADAR ZARE (2)",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RP0h",
+        videoUrl: "https://mega.nz/embed/YxgnzQRT#mso9O7nDEvV6ikQDmuOgEHC_nVVnTUQt5cvasbSnO8Y",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "GADAR ZARE (1)",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/ROZ0",
+        videoUrl: "https://mega.nz/embed/594A3Aja#a6a_KMQSYWxskrFFq4a8hMBa-FEmI1Mx6vJcNNrLRxY",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "DAN KWALISA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/Usaq",
+        videoUrl: "https://mega.nz/embed/Rx4jwDjI#7wPLeKW5LuKOpkAoGgbcJBZtlK6-fms5QlylTPzN9gM",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "CIMA ZAUNE",
+        category: "Algaita Dub-Studio",
+    },
     {
         imgUrl: "https://short-link.me/UrN2",
         videoUrl: "https://mega.nz/embed/l4Qy2TzT#7A7lHPElDvm_2Q8ySx5b4YItPjA8t7zgzTC660xIjN0",
