--- a/Index.html
+++ b/Index.html
@@ -1031,6 +1031,76 @@ footer.hide {
     <script>
         const data = [
             {
+        imgUrl: "https://short-link.me/Uv6N",
+        videoUrl: "https://mega.nz/embed/4gYzCIJJ#vztqhfhO8fQKQ4ZdJl1BZ6m2NFC_c5VmzLYQXlPovt0",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "SOJAN TAKIFE",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/Uv2Z",
+        videoUrl: "https://mega.nz/embed/A5phwTgI#xC9hl6-Dh9z34ugHxKTa_DElv3w_xXpOG648bsbBg9c",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "KWAMUSHE",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/Uv0u",
+        videoUrl: "https://mega.nz/embed/opJETZxT#7pFogqJQe__5yIzPqZk9aCzP3JyWxZyD7Sl-SZ-hPC4",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "KWAKWAF",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UuYt",
+        videoUrl: "https://mega.nz/embed/xsp2ESKA#4VY8vCgfUFYnHlVtTpIEZZIq7bLN-HLLdY82nvTvAcA",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "KITIMURMURA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/RRyZ",
+        videoUrl: "https://mega.nz/embed/ckIXFD4J#Ja_eu8OGMgdFo_z-HVpuYKc9KbxhLd-dttxR9b3y7qw",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "KARAR KWANA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UuPU",
+        videoUrl: "https://mega.nz/embed/ttYw3Bpa#ZLMWTUCFrduZ7x4ePfiCR4D4gC_McaFjm5HdG8Tbb7g",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "JA'IRIN SIRIKI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UuNl",
+        videoUrl: "https://mega.nz/embed/RspSlTKZ#d3U6T31yIb7TVmNmsbiV_JwYnBHTQ5csSRwP-GZr5Eg",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "HATSABIBI",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UuKR",
+        videoUrl: "https://mega.nz/embed/glJAjSJK#kR1Dubajkj0JrhOX8ghs409kGxVjOROmuNouTHuxC-M",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "GUDUN HIJIRA",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UuIZ",
+        videoUrl: "https://mega.nz/embed/51YUCaYa#2rUHkJmTko7lwbVO-Om1AaVE90aTzC3CBeTZjkz_8P0",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "GIDAN KURKUKU GHAYAL (2)",
+        category: "Algaita Dub-Studio",
+    },
+        {
+        imgUrl: "https://short-link.me/UuHX",
+        videoUrl: "https://mega.nz/embed/h44UiIJB#buqsxjG4l1eX2DTvqpA3WTN3mLsQfWwT1DEIWrw06YY",
+        adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
+        title: "GIDAN KURKUKU GHAYAL (1)",
+        category: "Algaita Dub-Studio",
+    },
+            {
         imgUrl: "https://short-link.me/RPiQ",
         videoUrl: "https://mega.nz/embed/Bp4yGIgB#g4XDfFVFI6XtAaSqF8x7Fu6a5qnzTPqMdSoZwwzmpyk",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
