--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
             font-size: 15px;
             margin: 0 9px;
             border: 1px solid #ccc;
-            background: linear-gradient(to right, #004d00, #00b300);
+            background: linear-gradient(to right, #ff0000, #ff0000);
             border-radius: 20px;
             padding: 9px 9px;
             font-weight: bold;
@@ -195,7 +195,7 @@
         .discover-item {
             flex: 0 0 auto;
             width: 110px;
-            background-color: rgba(0, 0, 0, 0.3);
+            background-color: #141430;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             overflow: hidden;
@@ -222,7 +222,7 @@
             margin: 0px 0;
         }
         .discover-item button {
-    background: linear-gradient(to right, #004d00, #00b300);
+    background: linear-gradient(to right, #ff, #00b300);
     color: #fff;
     border: 1px solid #ccc;
     padding: 5px 2px;
@@ -244,7 +244,7 @@
             padding: 2px;
         }
         .category-title {
-            font-size: 17px;
+            font-size: 18px;
             font-weight: bold;
             margin-bottom: 15px;
             display: flex;
@@ -285,9 +285,9 @@
         .frame {
             flex: 0 0 auto;
             width: 112px;
-            background-color: #121212;
+            background-color: #141430;
             border-radius: 8px;
-            margin-left: 7px;
+            margin-left: 5px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             overflow: hidden;
             text-align: center;
@@ -305,7 +305,7 @@
             margin-top: 0px;
         }
         .frame .content button {
-            background: linear-gradient(to right, #004d00, #00b300);
+            background: linear-gradient(to right, #ff, #00b300);
             color: #fff;
             border: 1px solid #ccc;
             padding: 5px 5px;
@@ -324,7 +324,7 @@
 
         /* Grid Layout for View All and Search Results */
         .grid-container {
-            margin-top: 90px;
+            margin-top: 100px;
             padding: 10px;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
@@ -1100,7 +1100,7 @@ footer.hide {
         title: "GIDAN KURKUKU GHAYAL (1)",
         category: "Algaita Dub-Studio",
     },
-            {
+        {
         imgUrl: "https://short-link.me/RPiQ",
         videoUrl: "https://mega.nz/embed/Bp4yGIgB#g4XDfFVFI6XtAaSqF8x7Fu6a5qnzTPqMdSoZwwzmpyk",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
@@ -1184,7 +1184,7 @@ footer.hide {
         title: "CIMA ZAUNE",
         category: "Algaita Dub-Studio",
     },
-    {
+        {
         imgUrl: "https://short-link.me/UrN2",
         videoUrl: "https://mega.nz/embed/l4Qy2TzT#7A7lHPElDvm_2Q8ySx5b4YItPjA8t7zgzTC660xIjN0",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
@@ -1276,21 +1276,21 @@ footer.hide {
         category: "Algaita Dub-Studio",
     },
         {
-        imgUrl: "https://short-link.me/RNmr",
+        imgUrl: "https://short-link.me/UukF",
         videoUrl: "https://mega.nz/embed/ogQWWYhC#JvLKzoozFV1jp-hScklS4BiivV_ay1rtFAmiABY8pU8",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
         title: "GARWASHI",
         category: "Algaita Dub-Studio",
     },
         {
-        imgUrl: "https://short-link.me/Uqu3",
+        imgUrl: "https://short-link.me/RR1h",
         videoUrl: "https://mega.nz/embed/gpp33bjA#eVQL3qa5-nmTDVPBCHH81gCU_6tCeei4jzY82D3ITI0",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
         title: "MAKIYAYI",
         category: "Algaita Dub-Studio",
     },
         {
-        imgUrl: "https://short-link.me/UqqQ",
+        imgUrl: "https://short-link.me/Uuj6",
         videoUrl: "https://mega.nz/embed/d9A33RZb#Jc5kQXW_eoKlu-tcxe0YOVk2mmmqxYEit_1vzZ6ebZI",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
         title: "DAN BASAJA",
@@ -1892,7 +1892,7 @@ const createUnlockedListItem = (item) => {
     const img = document.createElement('img');
     img.src = item.imgUrl;
     img.alt = item.title;
-    img.style.width = '105px';
+    img.style.width = '100px';
     img.style.height = '150px';
     img.style.objectFit = 'cover';
     img.style.borderRadius = '5px';
