--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NIN ID Card Generator</title>
+    <title>NIN ID Card</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <style>
@@ -13,12 +13,13 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            width: 100vh;
             background-color: #f4f4f4;
             flex-direction: column;
         }
         .id-card {
-            width: 500px;
-            height: 320px;
+            width: 480px;
+            height: 300px;
             background: linear-gradient(to bottom, #eef7eb, #c8e6c9);
             padding: 15px;
             border-radius: 10px;
@@ -29,69 +30,117 @@
             overflow: hidden;
         }
         .header {
+            text-align: left;
+            font-size: 18px;
             font-weight: bold;
-            text-align: center;
-            color: #006400;
-            font-size: 16px;
+        }
+        .header .top {
+            color: #008000;
+            font-size: 20px;
+        }
+        .header .bottom {
+            color: black;
+            font-size: 17px;
+            font-weight: bold;
         }
         .coat-of-arms {
             position: absolute;
-            width: 300px;
+            width: 350px;
             height: auto;
             opacity: 0.15;
-            top: 50px;
-            left: 100px;
+            top: 0px;
+            left: 90px;
             z-index: 0;
         }
         .profile {
             position: absolute;
-            left: 20px;
-            top: 60px;
+            left: 15px;
+            top: 70px;
             text-align: center;
             z-index: 1;
         }
         .profile img {
-            width: 90px;
-            height: 90px;
-            border-radius: 10px;
-            border: 2px solid black;
+            width: 110px;
+            height: 145px;
+            border-radius: 5px;
+            border: 2px solid #;
             cursor: pointer;
         }
         .content {
             position: absolute;
             left: 140px;
-            top: 60px;
+            top: px;
             font-size: 14px;
+            color: #555;
             z-index: 1;
         }
         input {
             border: none;
             background: transparent;
             font-weight: bold;
-            font-size: 14px;
-            width: 250px;
+            font-size: 16px;
+            width: 300px;
+            text-transform: uppercase;
         }
-        .qr-code {
+        .qr-container {
             position: absolute;
             right: 20px;
-            top: 60px;
+            top: 50px;
+            text-align: right;
+            z-index: 1;
+        }
+        .qr-code {
             background: white;
             padding: 5px;
             border-radius: 5px;
-            z-index: 1;
+            width: 80px;
+            height: 80px;
+            margin-bottom: 5px;
+        }
+        .qr-text {
+            font-size: 20px;
+            text-align: center;
+            font-weight: bold;
+            color: black;
+            margin-top: 2px;
+        }
+        .issue-date-container {
+            text-align: center;
+            margin-top: 5px;
+        }
+        .issue-date-title {
+            font-size: 15px;
+            text-align: center;
+            font-weight: bold;
+            color: black;
+            margin-bottom: 5px;
+        }
+        .issue-date-value {
+            font-size: 15px;
+            font-weight: bold;
+            color: black;
+            text-align: center;
+            border: none;
+            background: transparent;
+            width: 90px;
+        }
+        .issue-date-value:focus {
+            outline: none;
+            border-bottom: 1px solid #004d00;
         }
         .nin-section {
             position: absolute;
-            bottom: 30px;
+            bottom: 15px;
             width: 100%;
             text-align: center;
-            font-size: 16px;
+            font-size: 23px;
             font-weight: bold;
             color: black;
             z-index: 1;
         }
         .nin-number {
-            font-size: 28px; /* Large NIN number */
+            font-size: 35px;
+            text-align: center;
             font-weight: bold;
             letter-spacing: 2px;
             color: black;
@@ -112,30 +161,35 @@
 
     <div class="id-card" id="idCard">
         <div class="header">
-            FEDERAL REPUBLIC OF NIGERIA <br> DIGITAL NIN SLIP
+            <div class="top">FEDERAL REPUBLIC OF NIGERIA</div>
+            <div class="bottom">DIGITAL NIN SLIP</div>
         </div>
 
-        <!-- Nigerian Coat of Arms -->
-        <img src="https://blogger.googleusercontent.com/img/a/AVvXsEgnZA0HIkLzStZ7IM_hzgvZm7QmFgUx_Iy5OWZ-i4rycTcez9u5IWq0p-Q8TTSFzvTKiLDgMl2yZiAq1wPsVL_-_FZYoGsaeXuGZJwAvoxWSmw6uT3-mm0eJH6L_JT5X313cqiUxpvvENkJSHkEW6Qqtm2UHm9IIE5WWFwI-oe7KTpUqfL_PPpHk4mU4iI" class="coat-of-arms">
+        <img src="https://shortlink.uk/WMwt" class="coat-of-arms">
 
         <div class="profile">
             <input type="file" id="uploadImage" accept="image/*" style="display: none;">
-            <img id="profilePic" src="https://via.placeholder.com/90" onclick="document.getElementById('uploadImage').click();">
+            <img id="profilePic" src="https://shortlink.uk/WP3Y" onclick="document.getElementById('uploadImage').click();">
         </div>
 
         <div class="content">
-            <p><b>SURNAME:</b> <input type="text" id="surname" value="LAWAL"></p>
-            <p><b>GIVEN NAMES:</b> <input type="text" id="givenName" value="IBRAHIM,"></p>
-            <p><b>DATE OF BIRTH:</b> <input type="text" id="dob" value="11 NOV 1997"></p>
-            <p><b>SEX:</b> M</p>
-            <p><b>ISSUE DATE:</b> <input type="text" id="issueDate" value="2-28-2024"></p>
+            <p><b>SURNAME/NOM</b> <input type="text" id="surname" value="LAWAL"></p>
+            <p><b>GIVEN NAMES/PRENOMS</b> <input type="text" id="givenName" value="IBRAHIM,"></p>
+            <p><b>DATE OF BIRTH SEX/SEXE</b> <input type="text" id="dob" value="12 NOV 1997 M"></p>
         </div>
 
-        <div class="qr-code" id="qrcode"></div>
+        <div class="qr-container">
+            <div class="qr-code" id="qrcode"></div>
+            <div class="qr-text">NGA</div>
+            <div class="issue-date-container">
+                <div class="issue-date-title">ISSUE DATE</div>
+                <input type="text" id="issueDate" class="issue-date-value" value="21 FEB 2024">
+            </div>
+        </div>
 
         <div class="nin-section">
-            National Identification Number (NIN): <br>
-            <input type="text" id="nin" class="nin-number" value="7241 117 5958">
+            National Identification Number (NIN)<br>
+            <input type="text" id="nin" class="nin-number" value="5245007 5958">
         </div>
     </div>
 
@@ -146,8 +200,8 @@
             document.getElementById("qrcode").innerHTML = "";
             new QRCode(document.getElementById("qrcode"), {
                 text: document.getElementById("nin").value,
-                width: 60,
-                height: 60
+                width: 80,
+                height: 80
             });
         }
         generateQRCode();
