--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            width: 100vh;
+            width: 80vh;
             background-color: #f4f4f4;
             flex-direction: column;
         }
@@ -193,7 +193,8 @@
         </div>
     </div>
 
-    <button class="button" onclick="downloadID()">Download ID</button>
+    <button class="button" onclick="window.open('https://shortlink.uk/U4An', '_blank')">OPEN BACK OF THE ID</button>
+    </div>
 
     <script>
         function generateQRCode() {
