--- a/Index.html
+++ b/Index.html
@@ -12,8 +12,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            width: 80vh;
             background-color: #f4f4f4;
             flex-direction: column;
         }
@@ -116,7 +114,7 @@
             margin-bottom: 5px;
         }
         .issue-date-value {
-            font-size: 15px;
+            font-size: 14px;
             font-weight: bold;
             color: black;
             text-align: center;
@@ -175,7 +173,7 @@
         <div class="content">
             <p><b>SURNAME/NOM</b> <input type="text" id="surname" value="LAWAL"></p>
             <p><b>GIVEN NAMES/PRENOMS</b> <input type="text" id="givenName" value="IBRAHIM,"></p>
-            <p><b>DATE OF BIRTH SEX/SEXE</b> <input type="text" id="dob" value="12 NOV 1997 M"></p>
+            <p><b>DATE OF BIRTH</b> <input type="text" id="dob" value="12 NOV 1997     SEX/SEXE: M"></p>
         </div>
 
         <div class="qr-container">
@@ -189,12 +187,12 @@
 
         <div class="nin-section">
             National Identification Number (NIN)<br>
-            <input type="text" id="nin" class="nin-number" value="5245007 5958">
+            <input type="text" id="nin" class="nin-number" value="5245 007 5958">
         </div>
     </div>
 
-    <button class="button" onclick="window.open('https://shortlink.uk/U4An', '_blank')">OPEN BACK OF THE ID</button>
-    </div>
+    <button class="button" onclick="window.open('https://shortlink.uk/U4An', '_blank')">TURN BACK OF THE CARD</button>
+    </div>    
 
     <script>
         function generateQRCode() {
@@ -225,6 +223,105 @@
         }
 
         document.getElementById("nin").addEventListener("input", generateQRCode);
+    </script>
+
+</body>
+</htm<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NIN ID Card - Back</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f4f4f4;
+            flex-direction: column;
+        }
+        .id-card-back {
+            width: 480px;
+            height: 300px;
+            background: linear-gradient(to bottom, #eef7eb, #c8e6c9);
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            position: relative;
+            border: 2px solid #004d00;
+        }
+        .coat-of-arms {
+            position: absolute;
+            width: 340px;
+            height: auto;
+            opacity: 0.15;
+            top: 35px;
+            left: 80px;
+            z-index: 0;
+        }
+        .disclaimer {
+            font-size: 14px;
+            text-align: center;
+            font-weight: bold;
+        }
+        .disclaimer h2 {
+            font-size: 18px;
+            font-weight: bold;
+        }
+        .disclaimer h3 {
+            font-size: 16px;
+            font-style: italic;
+            margin-bottom: 10px;
+        }
+        .disclaimer p {
+            font-size: 12px;
+            text-align: justify;
+            margin: 5px 10px;
+        }
+        .download-btn {
+            margin-top: 20px;
+            padding: 10px 15px;
+            background: green;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="id-card-back" id="idCardBack">
+        <img src="https://shortlink.uk/U4Ml" class="coat-of-arms">
+        
+        <div class="disclaimer">
+            <h2>DISCLAIMER</h2>
+            <h3>Trust, but verify</h3>
+            <p>Kindly ensure each time this ID is presented, that you verify the credentials using a Government APPROVED verification resource.</p>
+            <p>The details on the front of this NIN Slip must EXACTLY match the verification result.</p>
+
+            <h2>CAUTION!</h2>
+            <p>If this NIN was not issued to the person on the front of this document, please DO NOT attempt to scan, photocopy or replicate the personal data contained herein.</p>
+            <p>You are only permitted to scan the barcode for the purpose of identity verification.</p>
+            <p>The FEDERAL GOVERNMENT OF NIGERIA assumes no responsibility if you accept any variance on the scan result or do not scan the 2D barcode overleaf.</p>
+        </div>
+    </div>
+
+    <button class="download-btn" onclick="downloadBackID()">Download Back of ID</button>
+
+    <script>
+        function downloadBackID() {
+            html2canvas(document.getElementById('idCardBack')).then(canvas => {
+                let link = document.createElement('a');
+                link.href = canvas.toDataURL();
+                link.download = 'National_ID_Back.png';
+                link.click();
+            });
+        }
     </script>
 
 </body>
