--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,8 @@
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
+            height: 100vh;
+            width: 80vh;
             align-items: center;
             background-color: #f4f4f4;
             flex-direction: column;
@@ -238,6 +240,8 @@
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
+            height: 100vh;
+            width: 80vh;
             align-items: center;
             background-color: #f4f4f4;
             flex-direction: column;
