--- a/Index.html
+++ b/Index.html
@@ -148,8 +148,8 @@
         .button {
             margin-top: 20px;
             padding: 10px 15px;
-            background: green;
-            color: white;
+            background-color: #f4f4f4;
+            color: #f4f4f4;
             border: none;
             cursor: pointer;
             font-size: 16px;
