--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 20px;
-            min-height: 100vh;
+            min-height: 20vh;
         }
 
         /* Header styling */
@@ -127,7 +127,7 @@ body {
         .mine-button {
             border: none;
             padding: 15px 30px;
-            border-radius: 8px;
+            border-radius: 50px;
             cursor: pointer;
             font-size: 1.1em;
             transition: all 0.3s;
@@ -237,7 +237,7 @@ body {
     <!-- Main Content -->
     <div class="mining-container">
         <h2 style="text-align: center;">
-            <i class="fas fa-rocket"></i> Cosmic Pi Miner
+            <i class="fas fa-rocket"></i> Pi Network 
         </h2>
 
         <div class="progress-bar">
@@ -277,15 +277,6 @@ body {
                     <div style="font-size: 0.9em; color: #aaa;">Online Auctions</div>
                 </div>
                 <div class="ad-reward">+0.00025π</div>
-            </a>
-
-            <a href="https://www.cnn.com" target="_blank" class="traffic-ad" data-reward="0.0002">
-                <div class="ad-icon"><i class="fas fa-newspaper"></i></div>
-                <div class="ad-content">
-                    <div>CNN News</div>
-                    <div style="font-size: 0.9em; color: #aaa;">World News</div>
-                </div>
-                <div class="ad-reward">+0.0002π</div>
             </a>
         </div>
     </div>
